<resources>
    <string name="app_name">PoetryApp</string>
    <string name="full_name">Full name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password</string>
</resources>