<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/full_name"
        android:padding="10dp"
        android:background="@drawable/edit_text"
        android:hint="@string/full_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@drawable/edit_text"
        android:hint="@string/mobile_number"
        android:maxLength="11"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@drawable/edit_text"
        android:hint="@string/email_address"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@drawable/edit_text"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints=""
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signup"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/goToLoginActivity"
        android:textColor="@color/teal_700"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>